test/classes/delete-free/owned/owned-record-instantiation-types-user-init-borrows-error.good
owned-record-instantiation-types-user-init-borrows-error.chpl:17: error: unresolved call 'GenericCollection(owned MyClass).init=(GenericCollection(MyClass))'
owned-record-instantiation-types-user-init-borrows-error.chpl:5: note: this candidate did not match: GenericCollection.init=(other: this.type)
owned-record-instantiation-types-user-init-borrows-error.chpl:17: note: because call actual argument #1 with type GenericCollection(MyClass)
owned-record-instantiation-types-user-init-borrows-error.chpl:5: note: is passed to formal 'ref other: GenericCollection(owned MyClass)'
